--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -1,8 +1,8 @@
 greeting = Hello!
 
 #File action:
-File= "Archivo"
-Open= "Abrir"
-Save= "Guardar"
-As= "como"
-Exit="Dejar"
+File= Archivo
+Open= Abrir
+Save= Guardar
+As= Como
+Exit= Dejar
