--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -6,3 +6,28 @@ Open= Abrir
 Save= Guardar
 As= Como
 Exit= Dejar
+
+#Edit window
+Edit= Editar
+Undo=Deshacer
+Redo=Rehacer
+
+#View
+View=Ver
+ZoomIn= Acercar
+ZoomOut=Alejar
+ZoomFull=Pantallo completo
+
+#Filter
+Filter=Filtrar 
+Meanfilter= Mean filter
+
+#Colour
+Colour=El Escala
+Greyscale=Gris
+
+#language
+English=Inglés
+Spanish=Español
+Language=Idioma
+
