Updated language dropdown for the new features

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -4,8 +4,10 @@ greeting = Hello!
 File= Archivo
 Open= Abrir
 Save= Guardar
-As= Como
+Saveas= Guardar como
+
 Exit= Dejar
+Export=Exportar
 
 #Edit window
 Edit= Editar
@@ -17,17 +19,32 @@ View=Ver
 ZoomIn= Acercar
 ZoomOut=Alejar
 ZoomFull=Pantallo completo
+Rotate90Right=Girar 90 derecha
+Rotate90Left=Girar 90 izquierda
+Rotate180=Girar 180
+Resize=Cambiar tamaño
+FlipVertical=Voltear Vertical
+FlipHorizontal=Voltear Horizontal
 
 #Filter
 Filter=Filtrar 
 Meanfilter= Mean filter
+Softblur=Desenfoque fino
+Sharpenfilter= Definir 
+Medianfilter= Filtro mediano
+Gaussianblur= Filtro Gaussiano
 
 #Colour
 Colour=El Escala
 Greyscale=Gris
+Invert=Invertir
+ColourCycleChannel=Cyclo de Colores 
+
+
 
 #language
 English=Inglés
 Spanish=Español
 Language=Idioma
+
 
