--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -1,7 +1,7 @@
 # List of English words translated to Spanish equivalent 
 
-greeting = Hello!
-
+Alter=Modificar
+ 
 #File action:
 File= Archivo
 Open= Abrir
