--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,12 +27,7 @@ build-job:       # This job runs in the build stage, which runs first.
     - echo "Compiling the code..."
     - echo "Compile complete."
 
-unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
-  script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
+
 
 lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
@@ -47,3 +42,34 @@ deploy-job:      # This job runs in the deploy stage.
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
+
+pages: # publish Javadoc website
+  tags:
+    - docker
+  image: eclipse-temurin:17
+  stage: build
+  script:
+    - javadoc -d docs src/cosc202/andie/*.java
+    - mkdir public
+    - echo 'test' >public/test.txt
+    - mv docs public/
+    - ls -R public | head
+    - echo 'first ten public/ files listed'
+  artifacts:
+    paths:
+    - public
+  only:
+    - main
+
+
+unit-test-job:
+  tags:
+    - docker
+  image: eclipse-temurin:17
+  stage: test
+  script:
+    - echo "Attempting to run unit tests..."
+    - chmod u+x gradlew
+    - ./gradlew test
+
+
