Addressing the embos filters (draft) The hedgehog test is going to be used as an image that gets displayed to the user as a sort of before vs after to showcase to the user what each embos filter would do to do the image.

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -35,6 +35,8 @@ Softblur=Desenfoque fino
 Sharpenfilter= Definir 
 Medianfilter= Filtro mediano
 Gaussianblur= Filtro Gaussiano
+Embos=Embos
+
 
 #Colour
 Colour=El Escala
