Updated language bundles to include macro actions

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -37,6 +37,12 @@ Medianfilter= Filtro mediano
 Gaussianblur= Filtro Gaussiano
 Embos=Embos
 
+#Macro 
+Macro= La Macro
+record= Recordar 
+stop= Detener
+load= Cargar 
+
 
 #Colour
 Colour=El Escala
