Finalised the Sobel filters (seperate from Embos)

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -36,6 +36,7 @@ Sharpenfilter= Definir
 Medianfilter= Filtro mediano
 Gaussianblur= Filtro Gaussiano
 Embos=Embos
+Sobel=Sobel
 
 #Macro 
 Macro= La Macro
