Implemented the block averaging + language update

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -37,6 +37,7 @@ Medianfilter= Filtro mediano
 Gaussianblur= Filtro Gaussiano
 Embos=Embos
 Sobel=Sobel
+BlockAverage= Block Average
 
 #Macro 
 Macro= La Macro
