fix toolbar dissappear after language change

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -37,7 +37,8 @@ Medianfilter= Filtro mediano
 Gaussianblur= Filtro Gaussiano
 Embos=Embos
 Sobel=Sobel
-BlockAverage= Block Average
+BlockAverage= Promedio de bloque
+RandomScatter = Dispersión aleatoria
 
 #Macro 
 Macro= La Macro
@@ -61,3 +62,8 @@ Language=Idioma
 
 #Macro
 RecordMacro=Enregistrer macro
+
+#Draw
+DrawRectangle = Dibujar Rectángulo
+DrawLine = Dibujar Linea
+DrawEllipse = Dibujar Elipse
