finish crop. need to fill out image and fix toolba

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -67,3 +67,6 @@ RecordMacro=Enregistrer macro
 DrawRectangle = Dibujar Rectángulo
 DrawLine = Dibujar Linea
 DrawEllipse = Dibujar Elipse
+
+#Crop
+CropImage = Delimitar imagen
