made mouse selection more robust

--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -69,4 +69,20 @@ DrawLine = Dibujar Linea
 DrawEllipse = Dibujar Elipse
 
 #Crop
-CropImage = Delimitar imagen
+CropImage = Cortar 
+
+#Message Popups
+
+#editable image 
+
+InvalidMacroIndex = Macro no válida! ¡La macro contiene operaciones de selección del mouse fuera de límites! Inténtelo de nuevo con un tamaño de imagen más grande.
+proceed= Quiere continuar
+selectArea= Necesitar eligir una región primera!
+radius= Registrar el radio
+success= Éxito del filtro!
+enterHeight= Registrar la altura del bloque 
+enterWidth= Registrar la ancho del bloque
+outlineColour= Eligir el color del esquema
+fillColour= Eligir el color de relleno
+drawBeforeCrop= Necesitas seleccionar una region primera!
+regionOutBound=La región selecionada es invalida. Intentar mas de nuevo! 
