--- a/src/MessageBundle_span_Spain.properties
+++ b/src/MessageBundle_span_Spain.properties
@@ -75,7 +75,7 @@ CropImage = Cortar
 
 #editable image 
 
-InvalidMacroIndex = Macro no válida! ¡La macro contiene operaciones de selección del mouse fuera de límites! Inténtelo de nuevo con un tamaño de imagen más grande.
+InvalidMacroIndex = Macro tienes inválidas! ¡La macro contiene operaciones de selección del mouse fuera de límites! Estas operaciones problemáticas no se han aplicado
 proceed= Quiere continuar
 selectArea= Necesitar eligir una región primera!
 radius= Registrar el radio
